--- a/index.html
+++ b/index.html
@@ -2,51 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Greenepsi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <title>Pierre Boulbes</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body id="top">
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
     <div class="container">
-        <a class="navbar-brand" href="#top"><img src="GreenepsiLogo-remove.png" alt="..." /></a>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#top">Accueil</a></li>
-                <li class="nav-item"><a class="nav-link" href="#mobile">Téléphonie</a></li>
-                <li class="nav-item"><a class="nav-link" href="#team">L'équipe</a></li>
-                <ul class="nav-item"><a class="nav-link" href="#about">A propos</a></ul>
-                <ul class="nav-item"><a class="nav-link" href="../code/inscription.php">Inscription</a></ul>
-                <ul class="nav-item"><a class="nav-link" href="../code/connexion.php">Connexion</a></ul>
+                <li class="nav-item"><a class="nav-link" href="#exp">Expériences</a></li>
+                <li class="nav-item"><a class="nav-link" href="#team">Mon Parcours</a></li>
             </ul>
-        </div>
     </div>
 </nav>
 
 <header class="header">
     <div class="container">
-        <img src="image3.jpg">
-        <div class="header-subheading">Bienvenue chez nous</div>
-        <div class="header-heading text-uppercase">Donnez une seconde vie à un téléphone</div>
+        <img src="PierreB.jpg">
+        <div class="header-subheading">Bienvenue sur mon CV !</div>
+        <div class="header-heading text-uppercase">Pierre BOULBES, 22 ans, Etudiant à l'école EPSI</div>
     </div>
 </header>
 
-<section class="section" id="mobile">
+<section class="section" id="exp">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Téléphonie</h2>
-            <h3 class="section-subheading text-muted">Les téléphones les plus revendus</h3>
+            <h2 class="section-heading text-uppercase">Mes expériences</h2>
         </div>
 
         <div class="row">
             <div class="col-lg-4">
                 <div class="mobile-section">
-                    <img class="img-fluid" src="iphone10.jpg"/>
                     <div class="mobile-text">
                         <div class="mobile-heading">Apple</div>
                         <div class="mobile-subheading text-muted">iPhone 10</div>
+                        <img class="img-fluid" src="cestmoienplusbeau.jpg"/>
                     </div>
                 </div>
             </div>
@@ -110,29 +101,6 @@
                         <div class="team-heading">Siguier Mélanie</div>
                         <div class="team-subheading text-muted">L'opératrice</div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="section" id="about">
-
-    <div class="container">
-        <div class="text-center">
-            <h2 class="section-heading text-uppercase">À propos</h2>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="about-section">
-                    <img class="img-fluid" src="ecolo.jpg"/>
-                </div>
-            </div>
-
-            <div class="col-lg-8">
-                <div class="about-section">
-                    <img class="img-fluid" src="About.png"/>
                 </div>
             </div>
         </div>
