--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
     <title>Pierre Boulbes</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="unknown%20(1).png" type="image/x-icon">
 </head>
 
 <body id="top">
@@ -12,16 +13,17 @@
             <ul class="navbar-nav text-uppercase ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#top">Accueil</a></li>
                 <li class="nav-item"><a class="nav-link" href="#exp">Expériences</a></li>
-                <li class="nav-item"><a class="nav-link" href="#team">Mon Parcours</a></li>
+                <li class="nav-item"><a class="nav-link" href="#parc">Mon Parcours</a></li>
             </ul>
     </div>
-</nav>
 
 <header class="header">
     <div class="container">
-        <img src="PierreB.jpg">
-        <div class="header-subheading">Bienvenue sur mon CV !</div>
-        <div class="header-heading text-uppercase">Pierre BOULBES, 22 ans, Etudiant à l'école EPSI</div>
+        <div class="exp-text">
+            <div class="exp-heading">Bienvenue sur mon CV !</div>
+            <div class="exp-subheading text-muted">Pierre BOULBES, 22 ans, Etudiant à l'école EPSI</div>
+            <img class="imgss" src="PierreB.jpg"/>
+        </div>
     </div>
 </header>
 
@@ -33,31 +35,31 @@
 
         <div class="row">
             <div class="col-lg-4">
-                <div class="mobile-section">
-                    <div class="mobile-text">
-                        <div class="mobile-heading">Apple</div>
-                        <div class="mobile-subheading text-muted">iPhone 10</div>
-                        <img class="img-fluid" src="cestmoienplusbeau.jpg"/>
+                <div class="exp-section">
+                    <div class="exp-text">
+                        <div class="exp-heading">Stage & Travail dans un EHPAD</div>
+                        <div class="exp-subheading text-muted">Au cours de mes années de première et terminale j'ai eu l'occasion d'effectuer plusieurs stage ainsi que de travailler dans l'EHPAD Les Berges du Canal à Carcassonne</div>
+                        <img class="imgs" src="cestmoienplusbeau.jpg"/>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="mobile-section">
-                    <img class="img-fluid" src="galaxys10.jpg"/>
-                    <div class="mobile-text">
-                        <div class="mobile-heading">Samsung</div>
-                        <div class="mobile-subheading text-muted">Galaxy s10</div>
+                <div class="exp-section">
+                    <div class="exp-text">
+                        <div class="exp-heading">Stage dans un cabinet de dentistes</div>
+                        <div class="exp-subheading text-muted">Au cours de ma première année à l'école EPSI de Toulouse, j'ai effectué un stage de 6 semaines dans un cabinet dentiste. J'ai pu y découvrir son environnement réseau</div>
+                        <img class="imgs" src="63021231d73dc7b83f7db4c3496ed854-m.webp"/>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="mobile-section">
-                    <img class="img-fluid" src="redminote10.png"/>
-                    <div class="mobile-text">
-                        <div class="mobile-heading">Xiaomi</div>
-                        <div class="mobile-subheading text-muted">Redmi Note 10</div>
+                <div class="exp-section">
+                    <div class="exp-text">
+                        <div class="exp-heading">Stage dans l'entreprise NOOUS de Toulouse</div>
+                        <div class="exp-subheading text-muted">Prochainement, je vais avoir l'occasion de travailler dans une grande entreprise toulousaine, qui gère les ressources humaines de plusieurs grandes entreprises telles qu'Airbus</div>
+                        <img class="imgss" src="noouslogo.png"/>
                     </div>
                 </div>
             </div>
@@ -65,41 +67,38 @@
     </div>
 </section>
 
-<section class="section" id="team">
+<section class="section" id="parc">
 
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Notre équipe</h2>
-            <h3 class="section-subheading text-muted">Les membres de notre équipe s'engagent à l'entière satisfaction de ses clients. </h3>
+            <h2 class="section-heading text-uppercase">Mon Parcours</h2>
+            <h3 class="section-subheading text-muted">Un parcours semé de réorientations ! </h3>
         </div>
 
         <div class="row">
             <div class="col-lg-4">
-                <div class="member">
-                    <img class="rounded-circle img-fluid" src="JulieM.jpg"/>
-                    <div class="team-text">
-                        <div class="team-heading">Montoux Julie</div>
-                        <div class="team-subheading text-muted">La patronne</div>
+                <div class="school">
+                    <div class="parc-text">
+                        <div class="parc-heading">LEAP Emilie de Rodat</div>
+                        <div class="parc-subheading text-muted">2018 - 2020</div>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="member">
-                    <img class="rounded-circle img-fluid" src="PierreB.jpg"/>
-                    <div class="team-text">
-                        <div class="team-heading">Boulbes Pierre</div>
-                        <div class="team-subheading text-muted">Le stratège</div>
+                <div class="school">
+                    <div class="parc-text">
+                        <div class="parc-heading">Faculté UBO de Brest, LEA Anglais, Allemand, Russe et Chinois</div>
+                        <div class="parc-subheading text-muted">2020 - 2021</div>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="member">
-                    <img class="rounded-circle img-fluid" src="MelanieS.jpg"/>
-                    <div class="team-text">
-                        <div class="team-heading">Siguier Mélanie</div>
-                        <div class="team-subheading text-muted">L'opératrice</div>
+                <div class="school">
+                    <div class="parc-text">
+                        <div class="parc-heading">EPSI de Toulouse</div>
+                        <div class="parc-subheading text-muted">2021 - Maintenant</div>
                     </div>
                 </div>
             </div>
